0026637: Save function works incorrect in OCAF mfc sample

Storage format was corrected.